k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: setraf
  labels:
    name: setraf
    app: ert-analyzer
    environment: production
